# BOXMEOUT_STELLA

./: .gitignore  README.md  index.html  package-lock.json  package.json  todo.md
contracts/contracts/boxmeout/: Cargo.toml  check_output.txt
contracts/contracts/boxmeout/src/: amm.rs  factory.rs  helpers.rs  lib.rs  market.rs  oracle.rs  treasury.rs
contracts/contracts/boxmeout/test_snapshots/: test_commit_market_not_open.1.json  test_commit_prediction_after_closing_rejected.1.json  test_commit_prediction_duplicate_rejected.1.json  test_commit_prediction_event_payload_correct.1.json  test_commit_prediction_happy_path.1.json  test_commit_prediction_zero_amount_rejected.1.json  test_complete_prediction_flow.1.json  test_create_market.1.json  test_create_market_closing_time_in_past.1.json  test_create_market_invalid_timestamps.1.json  test_create_market_uniqueness.1.json  test_deposit_fees.1.json  test_factory_initialize.1.json  test_market_creation_and_trading.1.json  test_market_initialize.1.json  test_multiple_users_commit.1.json  test_oracle_initialize.1.json  test_register_duplicate_oracle.1.json  test_register_multiple_oracles.1.json  test_register_oracle.1.json  test_register_oracle_exceeds_limit.1.json  test_sell_more_shares_than_owned.1.json  test_sell_shares_slippage.1.json  test_treasury_initialize.1.json
contracts/contracts/boxmeout/test_snapshots/market/tests/: test_resolve_before_resolution_time.1.json  test_resolve_market_happy_path.1.json  (+2 more)
contracts/contracts/boxmeout/tests/: amm_test.rs  factory_test.rs  market_test.rs  oracle_test.rs  treasury_test.rs
(+84 files in other folders)
